Make changes to post nav to fix jump to on mobile

--- a/wp-content/themes/chinapower/sass/base/_typography.scss
+++ b/wp-content/themes/chinapower/sass/base/_typography.scss
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 	line-height: 1.2;
 	font-weight: 400;
 	color: $blue;
-	margin: 0 0 1rem 0;
+	margin: 0.5rem 0 1rem 0;
 }
 
 %h3 {
